# uet-thesis-2026

./: .gitignore  .releaserc.json  CHANGELOG.md  REFACTORING_V2.2.md  REFACTORING_V2.3.md  package.json  pnpm-lock.yaml  submit-test-intents.sh
assets/: cow-dex-high-level-architecture-v1.drawio  cow-dex-overview-use_case_diagram-v1.0
contracts/: publish.sh
contracts/dex/: Move.toml  Published.toml
docs/: Draft_Spec_Idea Designation_1.0.0.docx  Draft_Spec_Idea Designation_2.1.docx  Draft_Spec_Idea Designation_2.2.docx  Draft_Spec_Idea Designation_2.3.docx
relayer/: .dockerignore  .env.example  .prettierrc  Dockerfile  docker-compose.yml  package.json
relayer/proto/: cow_event.proto
relayer/src/: app.controller.ts  app.module.ts  main.ts
reports/: intruction.txt  main.glg  main.glsdefs  main.synctex(busy)  main.tex  main.xdy  refs.bib  uet-awesome-thesis.cls  uet.bst
reports/chapters/: chapter1.tex  chapter2.tex  chapter3.tex
reports/frontmatter/: abstract.tex  coverpage.tex  declaration.tex  thanks.tex
script_tests/: cancel-newest-intents.sh  submit-test-intents.sh  submit-test-minor-intent.sh
solvers/: README.md  package.json
solvers/shared/: events.ts  package.json
solvers/solver-a/: README.md  debug-pools.ts  debug.js  debug.ts  index.ts  (+1 more)
sui-indexer/: Cargo.toml  INTEGRATION.md  build.rs
sui-indexer/migrations/2026-02-28-160000_intent_events/: down.sql  up.sql
sui-indexer/proto/: cow_event.proto
sui-indexer/scripts/: run.dev.sh  run.prod.sh  setup-and-run.sh
sui-indexer/src/: handlers.rs  main.rs  redis_stream.rs  schema.rs
(+80 files in other folders)
