[package]
name = "sui-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core framework dependencies
sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui.git", branch = "testnet" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"

# Diesel PostgreSQL
diesel = { version = "2.0", features = ["postgres", "r2d2"] }
diesel-async = { version = "0.5", features = [
    "bb8",
    "postgres",
    "async-connection-wrapper",
] }
diesel_migrations = "2.0"

# Async traits
async-trait = "0.1"

# URL parsing
url = "2.0"

# Use .env file
dotenvy = "0.15"

# Command line parsing
clap = { version = "4.0", features = ["derive"] }

# HTTP client for fetching checkpoints
reqwest = { version = "0.11", features = ["json"] }

# JSON serialization
serde_json = "1.0"

# DateTime formatting
chrono = "0.4"

# Redis client
redis = { version = "1.0.4", features = [
    "aio",
    "connection-manager",
    "tokio-comp",
] }

# Serde for JSON serialization
serde = { version = "1.0", features = ["derive"] }

# Base64 encoding for binary data
base64 = "0.21"

# gRPC framework
tonic = "0.11"
prost = "0.12"

# gRPC transport
tokio-stream = "0.1"

# Binary Canonical Serialization
bcs = "0.1.6"

[build-dependencies]
tonic-build = "0.11"
